--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,5 +5,28 @@
     .navbar {
         display: flex;
         justify-content: space-between;
+
+        .heading {
+            text-decoration: none;
+            color: #252525;
+            text-align: center;
+            font-size: 20px;
+            font-weight: 400;
+        }
+
+        .btn-group {
+            display: flex;
+            gap: 30px;
+
+            .button {
+                color: #252525;
+                text-align: center;
+                font-size: 20px;
+                font-weight: 400;
+                border: none;
+                background-color: transparent;
+                cursor: pointer;
+            }
+        }
     }
 }
