--- a/src/components/CountriesList/CountriesList.scss
+++ b/src/components/CountriesList/CountriesList.scss
@@ -5,5 +5,7 @@
 
 .cards-grid {
     display: grid;
-    grid-template-columns: repeat(autofill, minmax(230px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    gap: 54px;
+    padding-top: 42px;
 }
