--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -3,7 +3,7 @@
 
     .layout-wrapper {
         max-width: 78%;
-        height: 80vh;
         margin: 0 auto;
+        padding-bottom: 39px;
     };
 }   
