--- a/src/components/Selector/Selector.scss
+++ b/src/components/Selector/Selector.scss
@@ -1,3 +1,19 @@
-#react-select-3-listbox {
+.selector-container {
+    padding-top: 48px;
+
+    .selector {
+        margin-top: 7px;
+
+        .css-13cymwt-control {
+            border: none;
+        }
+
+        .css-4xgw5l-IndicatorsContainer2 {
+            display: none;
+        }
+    }
+
+    #react-select-3-listbox {
     overflow-y: hidden ;
+    }
 }
