--- a/src/components/FormWrap/FormWrap.scss
+++ b/src/components/FormWrap/FormWrap.scss
@@ -17,14 +17,19 @@
     form {
         display: flex;
         flex-direction: column;
-        gap: 50px;
+
+        .inputs-container {
+            display: flex;
+            flex-direction: column;
+            gap: 50px;
+        }
 
         label {
             display: flex;
             flex-direction: column;
             font-size: 12px;
             font-weight: 400;
-
+            
             input {
                 max-width: 350px;
                 height: 54px;
@@ -38,18 +43,23 @@
                     outline: none;
                 }
             }
-        }
-    }
 
-    button {
-        width: 133px;
-        margin: 0 auto;
-        padding: 7px 30px;
-        border: none;
-        border-radius: 15px;
-        background: #D9D9D9;
-        font-size: 20px;
-        font-weight: 600;
-        cursor: pointer;
+            .error {
+                color: red;
+            }
+        }
+
+        
+        button {
+            width: 133px;
+            margin: 33px auto 0 auto;
+            padding: 7px 30px;
+            border: none;
+            border-radius: 15px;
+            background: #D9D9D9;
+            font-size: 20px;
+            font-weight: 600;
+            cursor: pointer;
+        }
     }
 }
