change loader styles

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -3,6 +3,7 @@
 
     .layout-wrapper {
         max-width: 78%;
+        min-height: 100vh;
         margin: 0 auto;
         padding-bottom: 39px;
     };
