--- a/src/pages/MyCountries/MyCountries.scss
+++ b/src/pages/MyCountries/MyCountries.scss
@@ -1,4 +1,7 @@
-.empty-fav {
+.myCountries-wrapper {
+    padding: 0 114px;
+
+    .empty-fav {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -7,4 +10,5 @@
     text-align: center;
     font-size: 26px;
     font-weight: bold;
+}
 }
