--- a/src/components/CountriesList/CountriesList.scss
+++ b/src/components/CountriesList/CountriesList.scss
@@ -8,4 +8,12 @@
     grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
     gap: 54px;
     padding-top: 42px;
+
+    @media screen and (max-width: 1026px) {
+        justify-items: center;
+    }
+
+    @media screen and (max-width: 750px) {
+        grid-template-columns: 1fr;
+    }
 }
