--- a/src/components/Selector/Selector.scss
+++ b/src/components/Selector/Selector.scss
@@ -1,6 +1,11 @@
 .selector-container {
     max-width: 73vw;
 
+    @media screen and (max-width: 450px) 
+    {
+        width: 230px;    
+    }
+
     .selector {
         margin-top: 7px;
 
