--- a/src/pages/CountryDetail/CountryDetail.scss
+++ b/src/pages/CountryDetail/CountryDetail.scss
@@ -3,6 +3,11 @@
     gap: 36px;
     padding: 0px 34px 0px 44px;
 
+    @media screen and (max-width: 650px) {
+        flex-direction: column;
+        align-items: center;
+    }
+
     .info-container {
         display: flex;
         flex-direction: column;
@@ -12,6 +17,10 @@
         border-radius: 10px;
         background-color: #fff;
         color: #252525;
+
+        @media screen and (max-width: 650px) {
+            width: 100%;
+        }
         
         .name {
             display: flex;
@@ -34,6 +43,11 @@
         border-radius: 10px;
         color: #252525;
         background-color: #fff;
+
+        @media screen and (max-width: 650px) {
+            width: 100%;
+            align-items: center;
+        }
 
     }
 }
