--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -2,4 +2,11 @@
     height: 100%;
     padding: 0px 114px;
     position: relative;
+
+    @media screen and (max-width: 450px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+    }
 }
