fix adaptive bugs and add new icon to PWA

--- a/src/components/Star/Star.scss
+++ b/src/components/Star/Star.scss
@@ -8,8 +8,11 @@
          &:first-child {
             fill: transparent;
 
-            &:hover {
+            @media(hover: hover) {
                 fill: black;
+            }
+            @media (hover: none) {
+                fill: none;
             }
         }
     
