--- a/src/components/Forms/Form.scss
+++ b/src/components/Forms/Form.scss
@@ -8,6 +8,14 @@
     border-radius: 10px;
     color: #252525;
 
+    @media screen and (max-width: 450px) {
+        width: 300px;
+    }
+
+    @media screen and (max-width: 300px) {
+        width: 250px;
+    }
+
     h3 {
         text-align: center;
         font-size: 20px;
