fix bug with star and button color

--- a/src/components/Star/Star.scss
+++ b/src/components/Star/Star.scss
@@ -9,10 +9,9 @@
             fill: transparent;
 
             @media(hover: hover) {
-                fill: black;
-            }
-            @media (hover: none) {
-                fill: none;
+                &:hover {
+                    fill: black;
+                };
             }
         }
     
