--- a/src/components/Forms/Form.scss
+++ b/src/components/Forms/Form.scss
@@ -65,6 +65,7 @@
             border: none;
             border-radius: 15px;
             background: #D9D9D9;
+            color: black;
             font-size: 20px;
             font-weight: 600;
             cursor: pointer;
